// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for {"alignLabel":"end","hideLabel":false,"stretch":false,"checked":false,"disabled":false,"loading":false,"compact":false,"theme":"light"} 1`] = `
":host {
  display: inline-flex;
  outline: 0 !important;
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  gap: calc(8px - (max(0px, calc(24px - calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) + 2px * 2))))) !important;
  color-scheme: light dark !important;
  justify-content: flex-start !important;
  width: auto !important;
  vertical-align: top !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  position: relative;
  display: flex;
  align-items: center;
  flex-shrink: 0;
  width: calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) * 2 - 2px * 2);
  height: calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex)));
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  box-sizing: content-box;
  border: 2px solid #6B6D70;
  border-radius: calc((calc(6px + 2.125ex) + 2px*2) / 2);
  background-color: transparent;
  cursor: pointer;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  margin: 0;
  padding: 0;
  margin-top: max(0px, calc((calc(6px + 2.125ex) - calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) + 2px * 2)) / 2));
  -webkit-appearance: none;
  appearance: none;
}
button::-moz-focus-inner {
  border: 0;
}
button:focus {
  outline: 0;
}
button:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
button::before {
  content: "";
  position: absolute;
  inset: calc(-2px - max(0px, calc(24px - calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) + 2px * 2)) / 2));
}
label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  min-width: 0;
  min-height: 0;
  cursor: pointer;
  color: #010205;
  order: 0;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  padding-top: max(0px, calc((calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) + 2px * 2) - calc(6px + 2.125ex)) / 2));
}
@media(hover:hover) {
  button:hover {
    border-color: #010205;
    background-color: transparent;
  }
  button:hover .toggle {
    background-color: #010205;
  }
}

.toggle {
  display: flex;
  place-items: center;
  place-content: center;
  width: calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) - 2px * 2);
  height: calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) - 2px * 2);
  border-radius: 50%;
  background-color: #010205;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), transform var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  transform: translate3d(2px, 0, 0);
}
.toggle:dir(rtl) {
  transform: translate3d(calc(2px * -1), 0, 0);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() should return correct css for {"alignLabel":"end","hideLabel":false,"stretch":false,"checked":false,"disabled":false,"loading":false,"compact":true,"theme":"light"} 1`] = `
":host {
  display: inline-flex;
  outline: 0 !important;
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  gap: calc(8px - (max(0px, calc(24px - calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 0.6668) * calc(6px + 2.125ex))) + 2px * 2))))) !important;
  color-scheme: light dark !important;
  justify-content: flex-start !important;
  width: auto !important;
  vertical-align: top !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  position: relative;
  display: flex;
  align-items: center;
  flex-shrink: 0;
  width: calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 0.6668) * calc(6px + 2.125ex))) * 2 - 2px * 2);
  height: calc(max(16px * 0.75, var(--p-internal-switch-scaling, 0.6668) * calc(6px + 2.125ex)));
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  box-sizing: content-box;
  border: 2px solid #6B6D70;
  border-radius: calc((calc(6px + 2.125ex) + 2px*2) / 2);
  background-color: transparent;
  cursor: pointer;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  margin: 0;
  padding: 0;
  margin-top: max(0px, calc((calc(6px + 2.125ex) - calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 0.6668) * calc(6px + 2.125ex))) + 2px * 2)) / 2));
  -webkit-appearance: none;
  appearance: none;
}
button::-moz-focus-inner {
  border: 0;
}
button:focus {
  outline: 0;
}
button:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
button::before {
  content: "";
  position: absolute;
  inset: calc(-2px - max(0px, calc(24px - calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 0.6668) * calc(6px + 2.125ex))) + 2px * 2)) / 2));
}
label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  min-width: 0;
  min-height: 0;
  cursor: pointer;
  color: #010205;
  order: 0;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  padding-top: max(0px, calc((calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 0.6668) * calc(6px + 2.125ex))) + 2px * 2) - calc(6px + 2.125ex)) / 2));
}
@media(hover:hover) {
  button:hover {
    border-color: #010205;
    background-color: transparent;
  }
  button:hover .toggle {
    background-color: #010205;
  }
}

.toggle {
  display: flex;
  place-items: center;
  place-content: center;
  width: calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 0.6668) * calc(6px + 2.125ex))) - 2px * 2);
  height: calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 0.6668) * calc(6px + 2.125ex))) - 2px * 2);
  border-radius: 50%;
  background-color: #010205;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), transform var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  transform: translate3d(2px, 0, 0);
}
.toggle:dir(rtl) {
  transform: translate3d(calc(2px * -1), 0, 0);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() should return correct css for {"alignLabel":"end","hideLabel":false,"stretch":false,"checked":false,"disabled":true,"loading":false,"compact":false,"theme":"light"} 1`] = `
":host {
  display: inline-flex;
  outline: 0 !important;
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  gap: calc(8px - (max(0px, calc(24px - calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) + 2px * 2))))) !important;
  color-scheme: light dark !important;
  justify-content: flex-start !important;
  width: auto !important;
  vertical-align: top !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  position: relative;
  display: flex;
  align-items: center;
  flex-shrink: 0;
  width: calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) * 2 - 2px * 2);
  height: calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex)));
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  box-sizing: content-box;
  border: 2px solid #949598;
  border-radius: calc((calc(6px + 2.125ex) + 2px*2) / 2);
  background-color: transparent;
  cursor: not-allowed;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  margin: 0;
  padding: 0;
  margin-top: max(0px, calc((calc(6px + 2.125ex) - calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) + 2px * 2)) / 2));
  -webkit-appearance: none;
  appearance: none;
}
button::-moz-focus-inner {
  border: 0;
}
button:focus {
  outline: 0;
}
button:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
button::before {
  content: "";
  position: absolute;
  inset: calc(-2px - max(0px, calc(24px - calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) + 2px * 2)) / 2));
}
label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  min-width: 0;
  min-height: 0;
  cursor: not-allowed;
  color: #949598;
  order: 0;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  padding-top: max(0px, calc((calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) + 2px * 2) - calc(6px + 2.125ex)) / 2));
}
.toggle {
  display: flex;
  place-items: center;
  place-content: center;
  width: calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) - 2px * 2);
  height: calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) - 2px * 2);
  border-radius: 50%;
  background-color: #949598;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), transform var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  transform: translate3d(2px, 0, 0);
}
.toggle:dir(rtl) {
  transform: translate3d(calc(2px * -1), 0, 0);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() should return correct css for {"alignLabel":"end","hideLabel":false,"stretch":true,"checked":false,"disabled":false,"loading":false,"compact":false,"theme":"light"} 1`] = `
":host {
  display: flex;
  outline: 0 !important;
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  gap: calc(8px - (max(0px, calc(24px - calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) + 2px * 2))))) !important;
  color-scheme: light dark !important;
  justify-content: space-between !important;
  width: 100% !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  position: relative;
  display: flex;
  align-items: center;
  flex-shrink: 0;
  width: calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) * 2 - 2px * 2);
  height: calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex)));
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  box-sizing: content-box;
  border: 2px solid #6B6D70;
  border-radius: calc((calc(6px + 2.125ex) + 2px*2) / 2);
  background-color: transparent;
  cursor: pointer;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  margin: 0;
  padding: 0;
  margin-top: max(0px, calc((calc(6px + 2.125ex) - calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) + 2px * 2)) / 2));
  -webkit-appearance: none;
  appearance: none;
}
button::-moz-focus-inner {
  border: 0;
}
button:focus {
  outline: 0;
}
button:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
button::before {
  content: "";
  position: absolute;
  inset: calc(-2px - max(0px, calc(24px - calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) + 2px * 2)) / 2));
}
label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  min-width: 0;
  min-height: 0;
  cursor: pointer;
  color: #010205;
  order: 0;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  padding-top: max(0px, calc((calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) + 2px * 2) - calc(6px + 2.125ex)) / 2));
}
@media(hover:hover) {
  button:hover {
    border-color: #010205;
    background-color: transparent;
  }
  button:hover .toggle {
    background-color: #010205;
  }
}

.toggle {
  display: flex;
  place-items: center;
  place-content: center;
  width: calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) - 2px * 2);
  height: calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) - 2px * 2);
  border-radius: 50%;
  background-color: #010205;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), transform var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  transform: translate3d(2px, 0, 0);
}
.toggle:dir(rtl) {
  transform: translate3d(calc(2px * -1), 0, 0);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() should return correct css for {"alignLabel":"end","hideLabel":false,"stretch":true,"checked":false,"disabled":false,"loading":true,"compact":false,"theme":"light"} 1`] = `
":host {
  display: flex;
  outline: 0 !important;
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  gap: calc(8px - (max(0px, calc(24px - calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) + 2px * 2))))) !important;
  color-scheme: light dark !important;
  justify-content: space-between !important;
  width: 100% !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  position: relative;
  display: flex;
  align-items: center;
  flex-shrink: 0;
  width: calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) * 2 - 2px * 2);
  height: calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex)));
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  box-sizing: content-box;
  border: 2px solid #949598;
  border-radius: calc((calc(6px + 2.125ex) + 2px*2) / 2);
  background-color: transparent;
  cursor: not-allowed;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  margin: 0;
  padding: 0;
  margin-top: max(0px, calc((calc(6px + 2.125ex) - calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) + 2px * 2)) / 2));
  -webkit-appearance: none;
  appearance: none;
}
button::-moz-focus-inner {
  border: 0;
}
button:focus {
  outline: 0;
}
button:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
button::before {
  content: "";
  position: absolute;
  inset: calc(-2px - max(0px, calc(24px - calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) + 2px * 2)) / 2));
}
label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  min-width: 0;
  min-height: 0;
  cursor: not-allowed;
  color: #949598;
  order: 0;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  padding-top: max(0px, calc((calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) + 2px * 2) - calc(6px + 2.125ex)) / 2));
}
.toggle {
  display: flex;
  place-items: center;
  place-content: center;
  width: calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) - 2px * 2);
  height: calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) - 2px * 2);
  border-radius: 50%;
  background-color: transparent;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), transform var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  transform: translate3d(2px, 0, 0);
}
.toggle:dir(rtl) {
  transform: translate3d(calc(2px * -1), 0, 0);
}
.spinner {
  width: calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) + 2px * 2);
  height: calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) + 2px * 2);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() should return correct css for {"alignLabel":"end","hideLabel":false,"stretch":true,"checked":false,"disabled":true,"loading":true,"compact":false,"theme":"dark"} 1`] = `
":host {
  display: flex;
  outline: 0 !important;
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  gap: calc(8px - (max(0px, calc(24px - calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) + 2px * 2))))) !important;
  color-scheme: light dark !important;
  justify-content: space-between !important;
  width: 100% !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  position: relative;
  display: flex;
  align-items: center;
  flex-shrink: 0;
  width: calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) * 2 - 2px * 2);
  height: calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex)));
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  box-sizing: content-box;
  border: 2px solid #7E7F82;
  border-radius: calc((calc(6px + 2.125ex) + 2px*2) / 2);
  background-color: transparent;
  cursor: not-allowed;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  margin: 0;
  padding: 0;
  margin-top: max(0px, calc((calc(6px + 2.125ex) - calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) + 2px * 2)) / 2));
  -webkit-appearance: none;
  appearance: none;
}
button::-moz-focus-inner {
  border: 0;
}
button:focus {
  outline: 0;
}
button:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
button::before {
  content: "";
  position: absolute;
  inset: calc(-2px - max(0px, calc(24px - calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) + 2px * 2)) / 2));
}
label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  min-width: 0;
  min-height: 0;
  cursor: not-allowed;
  color: #7E7F82;
  order: 0;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  padding-top: max(0px, calc((calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) + 2px * 2) - calc(6px + 2.125ex)) / 2));
}
.toggle {
  display: flex;
  place-items: center;
  place-content: center;
  width: calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) - 2px * 2);
  height: calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) - 2px * 2);
  border-radius: 50%;
  background-color: transparent;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), transform var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  transform: translate3d(2px, 0, 0);
}
.toggle:dir(rtl) {
  transform: translate3d(calc(2px * -1), 0, 0);
}
.spinner {
  width: calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) + 2px * 2);
  height: calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) + 2px * 2);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() should return correct css for {"alignLabel":"end","hideLabel":false,"stretch":true,"checked":false,"disabled":true,"loading":true,"compact":false,"theme":"light"} 1`] = `
":host {
  display: flex;
  outline: 0 !important;
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  gap: calc(8px - (max(0px, calc(24px - calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) + 2px * 2))))) !important;
  color-scheme: light dark !important;
  justify-content: space-between !important;
  width: 100% !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  position: relative;
  display: flex;
  align-items: center;
  flex-shrink: 0;
  width: calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) * 2 - 2px * 2);
  height: calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex)));
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  box-sizing: content-box;
  border: 2px solid #949598;
  border-radius: calc((calc(6px + 2.125ex) + 2px*2) / 2);
  background-color: transparent;
  cursor: not-allowed;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  margin: 0;
  padding: 0;
  margin-top: max(0px, calc((calc(6px + 2.125ex) - calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) + 2px * 2)) / 2));
  -webkit-appearance: none;
  appearance: none;
}
button::-moz-focus-inner {
  border: 0;
}
button:focus {
  outline: 0;
}
button:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
button::before {
  content: "";
  position: absolute;
  inset: calc(-2px - max(0px, calc(24px - calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) + 2px * 2)) / 2));
}
label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  min-width: 0;
  min-height: 0;
  cursor: not-allowed;
  color: #949598;
  order: 0;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  padding-top: max(0px, calc((calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) + 2px * 2) - calc(6px + 2.125ex)) / 2));
}
.toggle {
  display: flex;
  place-items: center;
  place-content: center;
  width: calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) - 2px * 2);
  height: calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) - 2px * 2);
  border-radius: 50%;
  background-color: transparent;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), transform var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  transform: translate3d(2px, 0, 0);
}
.toggle:dir(rtl) {
  transform: translate3d(calc(2px * -1), 0, 0);
}
.spinner {
  width: calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) + 2px * 2);
  height: calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) + 2px * 2);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() should return correct css for {"alignLabel":"end","hideLabel":false,"stretch":true,"checked":true,"disabled":false,"loading":false,"compact":false,"theme":"light"} 1`] = `
":host {
  display: flex;
  outline: 0 !important;
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  gap: calc(8px - (max(0px, calc(24px - calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) + 2px * 2))))) !important;
  color-scheme: light dark !important;
  justify-content: space-between !important;
  width: 100% !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  position: relative;
  display: flex;
  align-items: center;
  flex-shrink: 0;
  width: calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) * 2 - 2px * 2);
  height: calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex)));
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  box-sizing: content-box;
  border: 2px solid #197E10;
  border-radius: calc((calc(6px + 2.125ex) + 2px*2) / 2);
  background-color: #197E10;
  cursor: pointer;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  margin: 0;
  padding: 0;
  margin-top: max(0px, calc((calc(6px + 2.125ex) - calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) + 2px * 2)) / 2));
  -webkit-appearance: none;
  appearance: none;
}
button::-moz-focus-inner {
  border: 0;
}
button:focus {
  outline: 0;
}
button:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
button::before {
  content: "";
  position: absolute;
  inset: calc(-2px - max(0px, calc(24px - calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) + 2px * 2)) / 2));
}
label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  min-width: 0;
  min-height: 0;
  cursor: pointer;
  color: #010205;
  order: 0;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  padding-top: max(0px, calc((calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) + 2px * 2) - calc(6px + 2.125ex)) / 2));
}
@media(hover:hover) {
  button:hover {
    border-color: #0E4809;
    background-color: #0E4809;
  }
  button:hover .toggle {
    background-color: #FFF;
  }
}

.toggle {
  display: flex;
  place-items: center;
  place-content: center;
  width: calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) - 2px * 2);
  height: calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) - 2px * 2);
  border-radius: 50%;
  background-color: #FFF;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), transform var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  transform: translate3d(calc(100% + 2px), 0, 0);
}
.toggle:dir(rtl) {
  transform: translate3d(calc(calc(100% + 2px) * -1), 0, 0);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() should return correct css for {"alignLabel":"left","hideLabel":false,"stretch":false,"checked":false,"disabled":false,"loading":false,"compact":false,"theme":"light"} 1`] = `
":host {
  display: inline-flex;
  outline: 0 !important;
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  gap: calc(8px - (max(0px, calc(24px - calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) + 2px * 2))))) !important;
  color-scheme: light dark !important;
  justify-content: flex-start !important;
  width: auto !important;
  vertical-align: top !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  position: relative;
  display: flex;
  align-items: center;
  flex-shrink: 0;
  width: calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) * 2 - 2px * 2);
  height: calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex)));
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  box-sizing: content-box;
  border: 2px solid #6B6D70;
  border-radius: calc((calc(6px + 2.125ex) + 2px*2) / 2);
  background-color: transparent;
  cursor: pointer;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  margin: 0;
  padding: 0;
  margin-top: max(0px, calc((calc(6px + 2.125ex) - calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) + 2px * 2)) / 2));
  -webkit-appearance: none;
  appearance: none;
}
button::-moz-focus-inner {
  border: 0;
}
button:focus {
  outline: 0;
}
button:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
button::before {
  content: "";
  position: absolute;
  inset: calc(-2px - max(0px, calc(24px - calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) + 2px * 2)) / 2));
}
label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  min-width: 0;
  min-height: 0;
  cursor: pointer;
  color: #010205;
  order: -1;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  padding-top: max(0px, calc((calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) + 2px * 2) - calc(6px + 2.125ex)) / 2));
}
@media(hover:hover) {
  button:hover {
    border-color: #010205;
    background-color: transparent;
  }
  button:hover .toggle {
    background-color: #010205;
  }
}

.toggle {
  display: flex;
  place-items: center;
  place-content: center;
  width: calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) - 2px * 2);
  height: calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) - 2px * 2);
  border-radius: 50%;
  background-color: #010205;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), transform var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  transform: translate3d(2px, 0, 0);
}
.toggle:dir(rtl) {
  transform: translate3d(calc(2px * -1), 0, 0);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() should return correct css for {"alignLabel":"right","hideLabel":false,"stretch":false,"checked":false,"disabled":false,"loading":false,"compact":false,"theme":"light"} 1`] = `
":host {
  display: inline-flex;
  outline: 0 !important;
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  gap: calc(8px - (max(0px, calc(24px - calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) + 2px * 2))))) !important;
  color-scheme: light dark !important;
  justify-content: flex-start !important;
  width: auto !important;
  vertical-align: top !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  position: relative;
  display: flex;
  align-items: center;
  flex-shrink: 0;
  width: calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) * 2 - 2px * 2);
  height: calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex)));
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  box-sizing: content-box;
  border: 2px solid #6B6D70;
  border-radius: calc((calc(6px + 2.125ex) + 2px*2) / 2);
  background-color: transparent;
  cursor: pointer;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  margin: 0;
  padding: 0;
  margin-top: max(0px, calc((calc(6px + 2.125ex) - calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) + 2px * 2)) / 2));
  -webkit-appearance: none;
  appearance: none;
}
button::-moz-focus-inner {
  border: 0;
}
button:focus {
  outline: 0;
}
button:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
button::before {
  content: "";
  position: absolute;
  inset: calc(-2px - max(0px, calc(24px - calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) + 2px * 2)) / 2));
}
label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  min-width: 0;
  min-height: 0;
  cursor: pointer;
  color: #010205;
  order: 0;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  padding-top: max(0px, calc((calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) + 2px * 2) - calc(6px + 2.125ex)) / 2));
}
@media(hover:hover) {
  button:hover {
    border-color: #010205;
    background-color: transparent;
  }
  button:hover .toggle {
    background-color: #010205;
  }
}

.toggle {
  display: flex;
  place-items: center;
  place-content: center;
  width: calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) - 2px * 2);
  height: calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) - 2px * 2);
  border-radius: 50%;
  background-color: #010205;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), transform var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  transform: translate3d(2px, 0, 0);
}
.toggle:dir(rtl) {
  transform: translate3d(calc(2px * -1), 0, 0);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() should return correct css for {"alignLabel":"start","hideLabel":true,"stretch":false,"checked":false,"disabled":false,"loading":false,"compact":false,"theme":"light"} 1`] = `
":host {
  display: inline-flex;
  outline: 0 !important;
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  gap: calc(8px - (max(0px, calc(24px - calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) + 2px * 2))))) !important;
  color-scheme: light dark !important;
  justify-content: flex-start !important;
  width: auto !important;
  vertical-align: top !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  position: relative;
  display: flex;
  align-items: center;
  flex-shrink: 0;
  width: calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) * 2 - 2px * 2);
  height: calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex)));
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  box-sizing: content-box;
  border: 2px solid #6B6D70;
  border-radius: calc((calc(6px + 2.125ex) + 2px*2) / 2);
  background-color: transparent;
  cursor: pointer;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  margin: 0;
  padding: 0;
  margin-top: max(0px, calc((calc(6px + 2.125ex) - calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) + 2px * 2)) / 2));
  -webkit-appearance: none;
  appearance: none;
}
button::-moz-focus-inner {
  border: 0;
}
button:focus {
  outline: 0;
}
button:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
button::before {
  content: "";
  position: absolute;
  inset: calc(-2px - max(0px, calc(24px - calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) + 2px * 2)) / 2));
}
label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  min-width: 0;
  min-height: 0;
  cursor: pointer;
  color: #010205;
  order: -1;
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(hover:hover) {
  button:hover {
    border-color: #010205;
    background-color: transparent;
  }
  button:hover .toggle {
    background-color: #010205;
  }
}

.toggle {
  display: flex;
  place-items: center;
  place-content: center;
  width: calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) - 2px * 2);
  height: calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) - 2px * 2);
  border-radius: 50%;
  background-color: #010205;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), transform var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  transform: translate3d(2px, 0, 0);
}
.toggle:dir(rtl) {
  transform: translate3d(calc(2px * -1), 0, 0);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() should return correct css for {"alignLabel":{"base":"start","xs":"end","s":"start","m":"end","l":"start","xl":"end"},"hideLabel":{"base":true,"xs":false,"s":true,"m":false,"l":true,"xl":false},"stretch":{"base":false,"xs":true,"s":false,"m":true,"l":false,"xl":true},"checked":false,"disabled":false,"loading":false,"compact":false,"theme":"light"} 1`] = `
":host {
  display: inline-flex;
  outline: 0 !important;
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  gap: calc(8px - (max(0px, calc(24px - calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) + 2px * 2))))) !important;
  color-scheme: light dark !important;
  justify-content: flex-start !important;
  width: auto !important;
  vertical-align: top !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  position: relative;
  display: flex;
  align-items: center;
  flex-shrink: 0;
  width: calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) * 2 - 2px * 2);
  height: calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex)));
  font: 1rem 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  box-sizing: content-box;
  border: 2px solid #6B6D70;
  border-radius: calc((calc(6px + 2.125ex) + 2px*2) / 2);
  background-color: transparent;
  cursor: pointer;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  margin: 0;
  padding: 0;
  margin-top: max(0px, calc((calc(6px + 2.125ex) - calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) + 2px * 2)) / 2));
  -webkit-appearance: none;
  appearance: none;
}
button::-moz-focus-inner {
  border: 0;
}
button:focus {
  outline: 0;
}
button:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: 2px;
}
button::before {
  content: "";
  position: absolute;
  inset: calc(-2px - max(0px, calc(24px - calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) + 2px * 2)) / 2));
}
label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  min-width: 0;
  min-height: 0;
  cursor: pointer;
  color: #010205;
  order: -1;
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(min-width:480px) {
  :host {
    justify-content: space-between !important;
    width: 100% !important;
  }
  label {
    order: 0;
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
    padding-top: max(0px, calc((calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) + 2px * 2) - calc(6px + 2.125ex)) / 2));
  }
}

@media(min-width:760px) {
  :host {
    justify-content: flex-start !important;
    width: auto !important;
    vertical-align: top !important;
  }
  label {
    order: -1;
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
}

@media(min-width:1000px) {
  :host {
    justify-content: space-between !important;
    width: 100% !important;
  }
  label {
    order: 0;
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
    padding-top: max(0px, calc((calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) + 2px * 2) - calc(6px + 2.125ex)) / 2));
  }
}

@media(min-width:1300px) {
  :host {
    justify-content: flex-start !important;
    width: auto !important;
    vertical-align: top !important;
  }
  label {
    order: -1;
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
}

@media(min-width:1760px) {
  :host {
    justify-content: space-between !important;
    width: 100% !important;
  }
  label {
    order: 0;
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
    padding-top: max(0px, calc((calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) + 2px * 2) - calc(6px + 2.125ex)) / 2));
  }
}

@media(hover:hover) {
  button:hover {
    border-color: #010205;
    background-color: transparent;
  }
  button:hover .toggle {
    background-color: #010205;
  }
}

.toggle {
  display: flex;
  place-items: center;
  place-content: center;
  width: calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) - 2px * 2);
  height: calc(calc(max(16px * 0.75, var(--p-internal-switch-scaling, 1) * calc(6px + 2.125ex))) - 2px * 2);
  border-radius: 50%;
  background-color: #010205;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), transform var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  transform: translate3d(2px, 0, 0);
}
.toggle:dir(rtl) {
  transform: translate3d(calc(2px * -1), 0, 0);
}
.loading {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;
